Fix height of about me section to look better on mobile

--- a/portfolio/src/components/AboutMe/AboutMe.scss
+++ b/portfolio/src/components/AboutMe/AboutMe.scss
@@ -1,11 +1,10 @@
 .about-me {
   background-color: hsl(0, 0%, 98%);
   width: 100%;
-  height: 100vh;
   padding: 2rem;
 
   @media screen and (min-width: 768px) {
-    padding: 2rem 5rem;
+    padding: 3rem 5rem;
   }
 
   &__technologies {
